[project]
name = "comfyui-in-memory-transceiver"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "nat-chan", email = "ogino.natsuki.tm@alumni.tsukuba.ac.jp" }
]
dependencies = [
    "fs>=2.4.16",
    "comfyui-annotations @ git+https://github.com/andrewharp/ComfyUI-Annotations",
    "numpy>=1.26.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["./"]
