[project]
name = "transceiver"
version = "0.1.0"
description = "transceiver is a Python library that swiftly exchanges complex data structures such as numpy arrays and PIL images between processes, optimizing AI inference tasks that utilize ComfyUI."
authors = [
    { name = "nat-chan", email = "ogino.natsuki.tm@alumni.tsukuba.ac.jp" }
]
dependencies = [
    "fs>=2.4.16",
#    "comfyui-annotations @ git+https://github.com/andrewharp/ComfyUI-Annotations",
    "numpy>=1.26.4",
    "pyarrow>=16.0.0",
]
readme = "README.md"
requires-python = ">= 3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipykernel>=6.29.4",
    "ruff",
    "mypy",
    "pydantic",
    "pytest",
    "build>=1.2.1",
    "twine>=5.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/transceiver"]

[tool.rye.workspace]
members = ["repositories/**/*"]


[project.urls]
Homepage = "https://github.com/nat-chan/transceiver"
Issues = "https://github.com/nat-chan/transceiver/issues"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
exclude = [".venv"]

select = [
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",  # pycodestyle errors
    "G",
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
    "EXE",
    "F",
    "SIM1",
    # Not included in flake8
    "LOG",
    "NPY",
    "PERF",
    "PGH004",
    "PIE794",
    "PIE800",
    "PIE804",
    "PIE807",
    "PIE810",
    "PLC0131", # type bivariance
    "PLC0132", # type param mismatch
    "PLC0205", # string as __slots__
    "PLE",
    "PLR0133", # constant comparison
    "PLR0206", # property with params
    "PLR1722", # use sys exit
    "PLW0129", # assert on string literal
    "PLW0406", # import self
    "PLW0711", # binary op exception
    "PLW1509", # preexec_fn not safe with threads
    "PLW3301", # nested min max
    "PT006", # TODO: enable more PT rules
    "PT022",
    "PT023",
    "PT024",
    "PT025",
    "PT026",
    "PYI",
    "RUF008", # mutable dataclass default
    "RUF015", # access first ele in constant time
    "RUF016", # type error non-integer index
    "RUF017",
    "TRY200", # TODO: migrate from deprecated alias
    "TRY302",
]
